Refactor compile method in CompilerOfC to use ProcessBuilder